# libtorchCppExtension

./: .gitignore  CMakeLists.txt  README.md  libtorch_cpp_extension_func.h  libtorch_cpp_extension_module.h  libtorch_cpp_extension_test.h  main.cpp
cmake/: CopyTorchDlls.cmake
